Separated operations in modules