@@ -9,7 +9,7 @@
 		<version>1.0.0</version>
 	</parent>
 
-	<artifactId>application</artifactId>
+	<artifactId>operations</artifactId>
 
 	<build>
 		<plugins>
@@ -45,10 +45,6 @@
 							<target>
 								<exec executable="${java.home}/bin/jar" failonerror="true">
 
-									<!-- add the main class -->
-									<arg value="--main-class" />
-									<arg value="name.ulbricht.streams.application.Streams" />
-
 									<!-- add the version number -->
 									<arg value="--module-version" />
 									<arg value="${project.version}" />
@@ -60,45 +56,6 @@
 									<arg value="--file" />
 									<arg
 										value="${project.build.directory}/release/${project.artifactId}-${project.version}.jar" />
-								</exec>
-							</target>
-						</configuration>
-					</execution>
-
-					<!-- create runimage with a minimal JRE and all required modules and 
-						a launcher "bin/Streams" in the "runimage" folder -->
-					<!-- see https://maven.apache.org/plugins/maven-jlink-plugin -->
-					<execution>
-						<id>create-jre</id>
-						<phase>package</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<target>
-								<exec executable="${java.home}/bin/jlink"
-									failonerror="true">
-									
-									<!-- paths to modules -->
-									<arg value="-p" />
-									<arg
-										value="${project.build.directory}/release;${project.build.directory}/../../api/target/release;${project.build.directory}/../../operations/target/release;${project.build.directory}/../../script/target/release" />
-
-									<!-- name(s) of root module(s) -->
-									<arg value="--add-modules" />
-									<arg
-										value="name.ulbricht.streams.application,name.ulbricht.streams.api,name.ulbricht.streams.operations,name.ulbricht.streams.script" />
-
-									<!-- target folder for the runimage -->
-									<arg value="--output" />
-									<arg value="${project.build.directory}/runimage" />
-
-									<!-- strip debug information -->
-									<arg value="--strip-debug" />
-
-									<!-- name of the launcher and module to launch -->
-									<arg value="--launcher" />
-									<arg value="Streams=name.ulbricht.streams.application" />
 								</exec>
 							</target>
 						</configuration>
